syntax = "proto3";
package status;

service Status {
  rpc GetStatus (StatusRequest) returns (StatusResponse);
}

message StatusRequest {}

message StatusResponse {
  string id = 1;
  repeated string multi_addresses = 2;
  int32 connected_nodes = 3;
}
